<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/layout_padding_top"
    tools:context=".DisplayActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/black_color"
        android:textSize="@dimen/big_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/email_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/hint_mail"
        android:textColor="@color/black_color"
        android:textSize="@dimen/big_text_size" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/black_color"
        android:textSize="@dimen/big_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/password_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:gravity="center"
        android:hint="@string/hint_pass"
        android:textColor="@color/black_color"
        android:textSize="@dimen/big_text_size" />

</LinearLayout>